app/base/logging/seq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seq
  namespace: default
spec:
  selector:
    app: seq
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: ingestion
    port: 5341
    targetPort: 5341
